--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </section><!-- End About Section -->
 
-       <!-- ======= Skills Section ======= -->
+     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
@@ -121,18 +121,10 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
-
             <div class="progress">
-              <span class="skill">HTML 5<i class="val">90%</i></span>
+              <span class="skill">Bootstrap v5<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS 3<i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -165,13 +157,9 @@
 
           </div>
 
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-            <div class="progress">
-              <span class="skill">Bootstrap 5 & older<i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </div>
             <div class="progress">
               <span class="skill">MongoDB <i class="val">75%</i></span>
